@@ -40,7 +40,7 @@ my $handler = builder {
     enable "Greylist",
       default_rate => 5,
       file         => $file,
-      init_file    => 1,
+      cache_config => { init_file => 1, unlink_on_exit => 1, expire_time => 30 },
       greylist     => \%greylist;
 
     sub {
