@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  [Incompatible Changes]
+  - The `init_file` option was replaced with `cache_config` which is a configuration hash for
+    Cache::FastMmap.
 
 v0.5.4    2023-12-04 15:05:41+00:00 Europe/London (TRIAL RELEASE)
   [Enhancements]
